[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/objects/hooks/FlexibleGrapplingHook.gd" type="Script" id=1]
[ext_resource path="res://source/objects/hooks/Hook.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/objects/hooks/Links.tscn" type="PackedScene" id=3]

[node name="FlexibleGrapplingHook" type="Node2D"]
script = ExtResource( 1 )

[node name="Links" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 8 )

[node name="Hook" parent="." instance=ExtResource( 2 )]

[node name="Ray1" type="RayCast2D" parent="."]
enabled = true

[node name="Ray2" type="RayCast2D" parent="."]
enabled = true

[node name="Timer" type="Timer" parent="."]
